--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,18 @@
+body, html {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    background: #151515;
+}
+
 .valueAnimation-enter {
     transform: scale(0,0);
 }
 
 .valueAnimation-enter.valueAnimation-enter-active {
     transform: scale(1,1);
-    transition: transform 350ms ease-in;
+    transition: transform 150ms ease-in;
 }
 
 .valueAnimation-leave {
@@ -13,5 +21,5 @@
 
 .valueAnimation-leave.valueAnimation-leave-active {
     transform: scale(0,0);
-    transition: opacity 300ms ease-in;
+    transition: opacity 100ms ease-in;
 }
